tests/cases/traits/errors/structural-capability-generic-alias-arity.ari
type Combiner[T] = has add(T) -> T;

fn combine_i64[T: Combiner](value: T) -> i64 {
  value.add(1)
}

fn main() -> i64 {
  return 0;
}
